--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
+    "@truffle/contract": "^4.4.1",
     "next": "12.0.7",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-simple-animate": "^3.3.12",
+    "react-toastify": "^8.1.0",
+    "swr": "^1.1.0",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
+    "@truffle/hdwallet-provider": "^1.5.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19"
   }
 }
